feat: socketio.html 添加 event 过滤展示功能

--- a/kernel-net-socketio/src/main/resources/static/socketio.html
+++ b/kernel-net-socketio/src/main/resources/static/socketio.html
@@ -122,7 +122,7 @@
             }
 
             str = `收到消息event[${event}],数据类型[${dataType}]：${str}`
-            if (filterEvents.indexOf(event) > -1) {
+            if (filterEvents.length == 0 || filterEvents.indexOf(event) > -1) {
                 output('<span class="username-msg"><span style="color: blue; ">' + getNowTime() + '&nbsp;</span>' + str + ' </span>');
             }
             console.log(data);
