--- a/kernel-net-socketio/src/main/resources/static/socketio.html
+++ b/kernel-net-socketio/src/main/resources/static/socketio.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SocketIOClient Test Page</title>
-    <link rel="stylesheet" href="./styles.css">
     <script src="./jquery/3.3.1/jquery.min.js"></script>
-    <script src="./socket.io.4.7.3.js"></script>
+    <script src="./socket.io.js"></script>
     <style>
         body {
             padding: 20px;
